--- a/Python/hsa04110.ipynb
+++ b/Python/hsa04110.ipynb
@@ -681,34 +681,8 @@
     }
    ],
    "source": [
-    "pathway_genes = REST.kegg_link(\"hsa\", \"pathway:hsa04110\").read()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e82b9b8-4501-4608-b1ed-783869d067a6",
-   "metadata": {},
-   "source": [
-    "Obtaining gene identifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "88a4db8d-977b-43b2-b30d-44bca3ebfac1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['hsa:1017', 'hsa:1019', 'hsa:1021', 'hsa:1022', 'hsa:1026', 'hsa:1027', 'hsa:10274', 'hsa:1028', 'hsa:1029', 'hsa:1030', 'hsa:1031', 'hsa:1032', 'hsa:10393', 'hsa:10403', 'hsa:10459', 'hsa:10735', 'hsa:10744', 'hsa:10912', 'hsa:10926', 'hsa:10971', 'hsa:1111', 'hsa:11200', 'hsa:113130', 'hsa:114799', 'hsa:119504', 'hsa:1387', 'hsa:151648', 'hsa:157570', 'hsa:1647', 'hsa:1663', 'hsa:168448', 'hsa:1869', 'hsa:1870', 'hsa:1871', 'hsa:1874', 'hsa:1875', 'hsa:2033', 'hsa:23047', 'hsa:23063', 'hsa:23244', 'hsa:23383', 'hsa:23594', 'hsa:23595', 'hsa:246184', 'hsa:25', 'hsa:25836', 'hsa:25847', 'hsa:25906', 'hsa:26271', 'hsa:27085', 'hsa:27127', 'hsa:2810', 'hsa:2932', 'hsa:29882', 'hsa:29945', 'hsa:3065', 'hsa:3066', 'hsa:4085', 'hsa:4087', 'hsa:4088', 'hsa:4089', 'hsa:4171', 'hsa:4172', 'hsa:4173', 'hsa:4174', 'hsa:4175', 'hsa:4176', 'hsa:4193', 'hsa:4609', 'hsa:4616', 'hsa:472', 'hsa:494551', 'hsa:4998', 'hsa:4999', 'hsa:5000', 'hsa:5001', 'hsa:5111', 'hsa:51343', 'hsa:51433', 'hsa:51434', 'hsa:51529', 'hsa:5347', 'hsa:545', 'hsa:546', 'hsa:5515', 'hsa:5516', 'hsa:5518', 'hsa:5519', 'hsa:5525', 'hsa:5526', 'hsa:5527', 'hsa:5528', 'hsa:5529', 'hsa:55869', 'hsa:5591', 'hsa:57082', 'hsa:5885', 'hsa:5925', 'hsa:5933', 'hsa:5934', 'hsa:595', 'hsa:64682', 'hsa:6500', 'hsa:6502', 'hsa:699', 'hsa:701', 'hsa:7027', 'hsa:7029', 'hsa:7040', 'hsa:7042', 'hsa:7043', 'hsa:7157', 'hsa:7272', 'hsa:7465', 'hsa:7529', 'hsa:7531', 'hsa:7532', 'hsa:7533', 'hsa:7534', 'hsa:7709', 'hsa:80174', 'hsa:81620', 'hsa:8243', 'hsa:8317', 'hsa:8318', 'hsa:8379', 'hsa:8454', 'hsa:85417', 'hsa:8555', 'hsa:8556', 'hsa:8697', 'hsa:8881', 'hsa:890', 'hsa:8900', 'hsa:891', 'hsa:894', 'hsa:896', 'hsa:898', 'hsa:902', 'hsa:90381', 'hsa:9088', 'hsa:9126', 'hsa:9133', 'hsa:9134', 'hsa:9184', 'hsa:9212', 'hsa:9232', 'hsa:9319', 'hsa:9587', 'hsa:9700', 'hsa:983', 'hsa:990', 'hsa:991', 'hsa:993', 'hsa:994', 'hsa:995', 'hsa:996', 'hsa:9978']\n"
-     ]
-    }
-   ],
-   "source": [
-    "gene_hsa04110 = [line.split(\"\\t\")[1] for line in pathway_genes.strip().split(\"\\n\")]\n",
-    "print(gene_hsa04110)"
+    "pathway_genes = REST.kegg_link(\"hsa\", \"pathway:hsa04110\").read()\n",
+    "print(pathway_genes)"
    ]
   },
   {
@@ -816,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "4d2952e6-3ed9-4ac8-93c4-5d721b500d20",
    "metadata": {},
    "outputs": [
@@ -834,9 +808,9 @@
    "source": [
     "plt.figure(figsize=(10, 6))\n",
     "plt.bar(df['Term'], df['Count'], color='green')\n",
-    "plt.xlabel('Cell Cycle Genes')\n",
+    "plt.xlabel('Terms')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Cell Cycle Gene Distribution in KEGG Pathway hsa04110')\n",
+    "plt.title('Cell Cycle  Distribution of terms in KEGG Pathway hsa04110')\n",
     "plt.show()"
    ]
   },
